--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -62,5 +62,8 @@
     "submitBtn" : "submit",
     "addContactBtn" : "Add new",
     "addContactText" : "No contact found...."
+  },
+  "lastext" : { 
+    "text" : "Still on Work"
   }
 }
